--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="cafe.css">
         <link rel="stylesheet" href="resset.css">
         <link rel="stylesheet" href="tablet.css">
-        
+
     </head>
     <body>
         <header>
@@ -25,6 +25,19 @@
                 </div>
             </div>
         </header>
+        <div class="header-res">
+            <div class="header-res-container">
+                <div class="header-res-left">
+                    <i class="fa fa-coffee "></i> 
+                </div>
+                <div class="header-res-center">
+                    <h1>◯◯◯◯◯◯</h1>
+                </div>
+                <div class="header-res-right">
+                    <a href="#"><i class="fas fa-bars"></i></a>
+                </div>
+            </div>
+        </div>
         <main>
             <div class="main-container">
                 <div class="main-left">
@@ -53,6 +66,8 @@
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <p>Copyright : 2022　◯◯◯◯◯◯</p>
+        </footer>
     </body>
 </html>
